# llm-uno

./: .gitignore  LICENSE  README.md  llm_dist_sample.py  llm_uno_sample.py  prompt_examples.txt  pyproject.toml  requirements.txt  setup.py  uno_human.py
llm_uno/: Readme.md  custom_uno_game.py  local_CfAgent.py  local_ClozeAgent.py  models_to_use.txt  openrouter.py  prompt_examples.txt
llm_uno.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm_uno/examples/: llm_dist_sample.py
llm_uno/llama70B/: ds.sh  ds_agent.py  ds_rllogging.py  dscf.sh  dscf_agent.py  dscf_rllogging.py  llm_cf_template_instruct.txt  llm_template_instruct.txt  requirements.txt  test.py
llm_uno/llama8B/: cf_rllogging.py  cloze_rllogging.py  llm_agent.py  llm_cf_agent.py  llm_cf_template.txt  llm_template.txt  random_agent.py
llm_uno/llm_dist/: dist_CfAgent.py  dist_ClozeAgent.py  test.py  test_new.py
llm_uno/mistral24B/: cf_rllogging.py  cloze_rllogging.py  llm_agent.py  llm_cf_agent.py  llm_cf_template.txt  llm_template.txt
